<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/my_recipes"
        android:id="@+id/my_recipes"
        android:icon="@drawable/my_recipes"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:title="@string/add_recipe"
        android:id="@+id/add_recipe"
        android:icon="@drawable/add_recipe"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />
    <item
        android:title="@string/search"
        android:id="@+id/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        />
</menu>