<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8E4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textColorHint="#332F2F"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email_input"
        style="@android:style/Widget.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:textColor="#000000"
        android:textColorHint="#332F2F" />

    <EditText
        android:id="@+id/pass_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:textColor="#000000"
        android:textColorHint="#332F2F" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:width="150dp"
        android:backgroundTint="#BF9D39"
        android:text="@string/register" />

    <TextView
        android:id="@+id/go_to_auth"
        style="@style/Widget.Material3.SearchView.Prefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:height="50dp"
        android:contextClickable="true"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="Войти в аккаунт"
        android:textColor="#000000"
        android:textColorHint="#332F2F"
        android:textStyle="bold" />

</LinearLayout>